; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_predicate.c_CheckPointPredicate.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_predicate.c_CheckPointPredicate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@OldSerXidLock = common dso_local global i32 0, align 4
@LW_EXCLUSIVE = common dso_local global i32 0, align 4
@oldSerXidControl = common dso_local global %struct.TYPE_2__* null, align 8
@OldSerXidSlruCtl = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CheckPointPredicate() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @OldSerXidLock, align 4
  %3 = load i32, i32* @LW_EXCLUSIVE, align 4
  %4 = call i32 @LWLockAcquire(i32 %2, i32 %3)
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @oldSerXidControl, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp slt i32 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %0
  %10 = load i32, i32* @OldSerXidLock, align 4
  %11 = call i32 @LWLockRelease(i32 %10)
  br label %37

12:                                               ; preds = %0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** @oldSerXidControl, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = call i64 @TransactionIdIsValid(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %12
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** @oldSerXidControl, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @OldSerXidPage(i32 %21)
  store i32 %22, i32* %1, align 4
  br label %29

23:                                               ; preds = %12
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** @oldSerXidControl, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  store i32 %26, i32* %1, align 4
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** @oldSerXidControl, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  store i32 -1, i32* %28, align 4
  br label %29

29:                                               ; preds = %23, %18
  %30 = load i32, i32* @OldSerXidLock, align 4
  %31 = call i32 @LWLockRelease(i32 %30)
  %32 = load i32, i32* @OldSerXidSlruCtl, align 4
  %33 = load i32, i32* %1, align 4
  %34 = call i32 @SimpleLruTruncate(i32 %32, i32 %33)
  %35 = load i32, i32* @OldSerXidSlruCtl, align 4
  %36 = call i32 @SimpleLruFlush(i32 %35, i32 1)
  br label %37

37:                                               ; preds = %29, %9
  ret void
}

declare dso_local i32 @LWLockAcquire(i32, i32) #1

declare dso_local i32 @LWLockRelease(i32) #1

declare dso_local i64 @TransactionIdIsValid(i32) #1

declare dso_local i32 @OldSerXidPage(i32) #1

declare dso_local i32 @SimpleLruTruncate(i32, i32) #1

declare dso_local i32 @SimpleLruFlush(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
